--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("http://res.cloudinary.com/mers/image/upload/v1502142220/sunset-clouds_p4gncs.jpg");
+  background-image: url("https://media.giphy.com/media/SotJCbDWOnnWM/giphy.gif");
   background-size: cover;
   background-repeat: no-repeat;
 }
