--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://media.giphy.com/media/SotJCbDWOnnWM/giphy.gif");
+  background-image: url("https://theotherhubby.files.wordpress.com/2014/08/giphy1.gif?w=600");
   background-size: cover;
   background-repeat: no-repeat;
 }
