--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 .jumbotron {
   background-color: white;
-  width: 100vh;
+  width: 100vw;
   margin: auto;
   margin-top: 30px;
   padding-top: 10px;
