--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .jumbotron {
   background-color: white;
   width: 100vw;
-  height: 100vh
+  height: 100vh;
   margin: auto;
   margin-top: 30px;
   padding-top: 10px;
