--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@ body {
 }
 
 .jumbotron {
-  background-color: white;
-  width: 60px;
+  background-color: transparent !important
+  width: 60%;
   margin: auto;
   margin-top: 30px;
   padding-top: 10px;
-  opacity: 0.45;
+  opacity: 0.45
+  ;
 }
+
+ 
 
 .jumbotron .title {
   font-family: "Georgia";
