--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://theotherhubby.files.wordpress.com/2014/08/giphy1.gif?w=600");
+  background-image: url("http://res.cloudinary.com/mers/image/upload/v1502242053/clouds_ar927b.gif");
   background-size: cover;
   background-repeat: no-repeat;
 }
